--- a/src/app/presentation/pages/settings/settings.component.scss
+++ b/src/app/presentation/pages/settings/settings.component.scss
@@ -380,10 +380,7 @@
     transform 150ms ease;
 
   img {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
-    display: block;
   }
 
   &--active {
